--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/about.jpg" alt="">
+            <img src="images/home.jpg" alt="">
         </div>
 
 
