--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/home.jpg" alt="">
+            <img src="images/about.jpg" alt="">
 
         </div>
         <div class="about-content">
