some bugs removed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/home.jpg" alt="">
+            <img src="images/home4.jpg" alt="">
         </div>
 
 
@@ -60,7 +60,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/home.jpg" alt="">
+            <img src="images/home5.jpg" alt="">
 
         </div>
         <div class="about-content">
