added some certificate feature

--- a/certificate.html
+++ b/certificate.html
@@ -9,27 +9,30 @@
 
 <body>
     <header>
-        <h1>My College Certificates</h1>
+        <h1>My Certificates</h1>
         <a href=""><i class='bx bx-certification'></i></a>
     </header>
 
     <section class="main">
 
-        <h2>Certificate 1</h2>
         <img src="images/portfolio6.jpg" alt="Certificate 1">
+        <div class="box"><h2>Certificate 1</h2>
         <p>Description of Certificate 1</p>
+        </div>
 
 
 
-        <h2>Certificate 2</h2>
         <img src="images/portfolio6.jpg" alt="Certificate 2">
+        <div class="box"><h2>Certificate 2</h2>
         <p>Description of Certificate 2</p>
+    </div>
 
 
 
-        <h2>Certificate 3</h2>
         <img src="images/portfolio6.jpg" alt="Certificate 3">
+        <div class="box"><h2>Certificate 3</h2>
         <p>Description of Certificate 3</p>
+    </div>
     
     </section>
 
