--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 target="_blank" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/home4.jpg" alt="">
+            <img src="images/main.png" alt="">
         </div>
 
 
@@ -67,7 +67,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/home5.jpg" alt="">
+            <img src="images/main2.png" alt="">
 
         </div>
         <div class="about-content">
