--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 And a good knowledge of mysql and databases and worked with them in multiple projects.
                 seeking to further improve my html5 and css3 skills as the future full statck developer at Atmospheric
                 Solutions.
-                I wish i keep learning new technolgies and frameworks as they appear in the it word !.
+                I wish i keep learning new technolgies and frameworks as they appears in the world!.
             </p>
             <a href="#" class="btn">Read More</a>
 
