new thing added

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <img src="images/project3.png" alt="404">
                 <div class="portfolio-layer">
                     <h4>Notes App </h4>
-                    <p>Create a note pro app uing JAVA and Android studio and firebase for server it add user important data.
+                    <p>Create a note pro app using JAVA and Android studio and firebase for server it add user important data.
                     </p>
                     <a href=""><i class='bx bx-link'></i></a>
                 </div>
