--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <p>Create a college website using HTML CSS JAVA Script and Mysql database that add user login information 
                         and created a simple bot using javascript.
                     </p>
-                    <a href=""><i class='bx bx-link'></i></a>
+                    <a href="https://github.com/shahbaz705454/College_Website.git"><i class='bx bx-link'></i></a>
                 </div>
                 
             </div>
@@ -144,7 +144,7 @@
                     <h4>Portfolio website</h4>
                     <p>Create a portfolio Wbesite using HTML CSS and Java Script for adding my new project and upcoming projects.
                     </p>
-                    <a href=""><i class='bx bx-link'></i></a>
+                    <a href="https://github.com/shahbaz705454/shahbaz-portfolio.git"><i class='bx bx-link'></i></a>
                 </div>
                 
             </div>
