--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://www.linkedin.com/in/mohd-shahbaz-462791213/   " target="_blank"><i
                         class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/146v6LN7YNc0KLILAlY-kmsDy-zw3tgOi/view?usp=share_link"
+            <a href="https://drive.google.com/file/d/1Y35dhOVV_dB0WbDjpj8pocU-rUnucwML/view?usp=sharing"
                 target="_blank" class="btn">Download CV</a>
         </div>
         <div class="home-img">
